--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,8 @@
     "unordered_map": "cpp",
     "utility": "cpp",
     "vector": "cpp",
-    "thread": "cpp"
+    "thread": "cpp",
+    "__tree": "cpp",
+    "set": "cpp"
   }
 }
